--- a/grunt-training/package.json
+++ b/grunt-training/package.json
@@ -21,7 +21,12 @@
   },
   "homepage": "https://github.com/gcrabe/useful-code-templates#readme",
   "devDependencies": {
-    "grunt": "^1.1.0"
+    "grunt": "^1.1.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-remove-logging": "^0.2.0",
+    "time-grunt": "^2.0.0"
   },
   "dependencies": {
     "time-grunt": "^2.0.0"
